@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
 Fusion 1.210 - February 28th, 2004
 --------------------------------------------------------------------------------
+- 03-03-04: FusionSQL -> Created Load_Characters Function. [AlexKreuz]
+- 03-03-04: FusionSQL -> Created Assign_AccountID Function. [AlexKreuz]
 - 03-03-04: Optimized Login Code. Faster Logins needed for SQL Timeout. [AlexKreuz]
 - 03-03-04: FusionSQL -> Created Call_Characters Function. [AlexKreuz]
 - 03-03-04: FusionSQL -> Created Load_Accounts Function. [AlexKreuz]
